Fixed image overflow

--- a/src/css/Chatbox.css
+++ b/src/css/Chatbox.css
@@ -26,7 +26,7 @@
 }
 
 .message_content {
-    overflow: "hidden"
+    overflow: hidden;
 }
 
 .message_sender {
